; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_fse_compress.c_FSE_createCTable.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_fse_compress.c_FSE_createCTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSE_TABLELOG_ABSOLUTE_MAX = common dso_local global i32 0, align 4
@PagedPool = common dso_local global i32 0, align 4
@FSEC_ALLOC_TAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @FSE_createCTable(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @FSE_TABLELOG_ABSOLUTE_MAX, align 4
  %8 = icmp ugt i32 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @FSE_TABLELOG_ABSOLUTE_MAX, align 4
  store i32 %10, i32* %4, align 4
  br label %11

11:                                               ; preds = %9, %2
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @FSE_CTABLE_SIZE_U32(i32 %12, i32 %13)
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  store i64 %16, i64* %5, align 8
  %17 = load i32, i32* @PagedPool, align 4
  %18 = load i64, i64* %5, align 8
  %19 = load i32, i32* @FSEC_ALLOC_TAG, align 4
  %20 = call i64 @ExAllocatePoolWithTag(i32 %17, i64 %18, i32 %19)
  %21 = inttoptr i64 %20 to i32*
  ret i32* %21
}

declare dso_local i32 @FSE_CTABLE_SIZE_U32(i32, i32) #1

declare dso_local i64 @ExAllocatePoolWithTag(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
